Selecting solution from word choices array.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>InternetMedicalDoctor.biz</title>
+	<script src="assets/javascript/game.js"></script>
 </head>
 <body>
 	<h1>InternetMedicalDoctor.biz</h1>
-	<img src="assets/images/path-to-healing.jpg" alt="The path to healing… Begins Here">
+	<img src="assets/images/path-to-healing.jpg" width="30%" alt="The path to healing… Begins Here">
 	<p>
-		Type the first letter of your symptom for Accurate Diagnosis. Make sure to identify your symptoms correctly or you may suffer side effects up to and including mortality.
+		Guess the letters of your condition for Accurate, Discreet Diagnosis.
 	</p>
+	<p>
+		Press any key to get started.
+	</p>
+	<h2 id="puzzle">WHat seems to be the matter?</h2>
 </body>
 </html>
